--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.flex.roo.addon</groupId>
 	<artifactId>org.springframework.flex.roo.addon</artifactId>
@@ -8,16 +9,16 @@
 	<name>org.springframework.flex.roo.addon</name>
 
 	<repositories>
-        <repository>
-            <id>com.springsource.repository.bundles.release</id>
-            <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
-            <url>http://repository.springsource.com/maven/bundles/release</url>
-        </repository>
-        <repository>
-            <id>com.springsource.repository.bundles.external</id>
-            <name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
-            <url>http://repository.springsource.com/maven/bundles/external</url>
-        </repository> 
+		<repository>
+			<id>com.springsource.repository.bundles.release</id>
+			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/release</url>
+		</repository>
+		<repository>
+			<id>com.springsource.repository.bundles.external</id>
+			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
+			<url>http://repository.springsource.com/maven/bundles/external</url>
+		</repository>
 		<repository>
 			<id>com.springsource.repository.bundles.milestone</id>
 			<name>SpringSource Enterprise Bundle Repository - External Bundle Milestones</name>
@@ -28,41 +29,54 @@
 			<name>SpringSource Enterprise Bundle Repository - Nightly Snapshots</name>
 			<url> http://repository.springsource.com/maven/bundles/snapshot</url>
 		</repository>
-        <repository>
-            <id>maven.springframework.org.milestone</id>
-            <name>Spring Framework Maven Repository - Milestone Releases</name>
-            <url>http://maven.springframework.org/milestone</url>
-        </repository>
-        <repository>
-            <id>maven.springframework.org.snapshot</id>
-            <name>Spring Framework Maven Repository - Nightly Snapshots</name>
-            <url>http://maven.springframework.org/milestone</url>
-        </repository>
-        <repository>
-        	<id>metaas-repo</id>
-        	<name>Metaas Maven Repository</name>
-        	<url>http://maven.badgers-in-foil.co.uk/maven2/</url>
-        </repository>
+		<repository>
+			<id>maven.springframework.org.milestone</id>
+			<name>Spring Framework Maven Repository - Milestone Releases</name>
+			<url>http://maven.springframework.org/milestone</url>
+		</repository>
+		<repository>
+			<id>maven.springframework.org.snapshot</id>
+			<name>Spring Framework Maven Repository - Nightly Snapshots</name>
+			<url>http://maven.springframework.org/milestone</url>
+		</repository>
+		<repository>
+			<id>metaas-repo</id>
+			<name>Metaas Maven Repository</name>
+			<url>http://maven.badgers-in-foil.co.uk/maven2/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
-        <!-- Spring Roo modules -->
+		<!-- Spring Roo modules -->
 		<dependency>
 			<groupId>org.springframework.roo</groupId>
 			<artifactId>org.springframework.roo.bootstrap</artifactId>
-			<version>1.0.0.RC4</version>
+			<version>1.1.0.M1</version>
 			<scope>provided</scope>
 		</dependency>
-        <!-- Other modules (if any) -->
-        <dependency>
-	      <groupId>uk.co.badgersinfoil.metaas</groupId>
-	      <artifactId>metaas</artifactId>
-	      <version>0.8</version>
-	    </dependency>
+		<!-- Other modules (if any) -->
+		<dependency>
+			<groupId>uk.co.badgersinfoil.metaas</groupId>
+			<artifactId>metaas</artifactId>
+			<version>0.8</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.7</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.2</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
-    <build>
-        <plugins>            
+	<build>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -73,16 +87,21 @@
 						<phase>compile</phase>
 						<configuration>
 							<tasks>
-								<property name="line.separator" value="${line.separator}"/>
-								<echo append="false" file="${basedir}/setup.bat">@set ROO_ADDON_CLASSPATH_FILE="${project.build.directory}\roo_classpath.txt"</echo>
-								<echo append="false" file="${basedir}/setup.env">export ROO_ADDON_CLASSPATH_FILE="${project.build.directory}/roo_classpath.txt"</echo>
-								<echo message="Created '${basedir}/setup.env' and '${basedir}\setup.bat'"/>
-								<echo message="*nix: use source ${basedir}/setup.env to read in variable"/>
-								<dirname file="${project.build.directory}" property="output.dir"/>
-								<mkdir dir="${output.dir}"/>
-								<property name="the_cp" refid="maven.runtime.classpath"/>
+								<property name="line.separator" value="${line.separator}" />
+								<echo append="false" file="${basedir}/setup.bat">@set
+									ROO_ADDON_CLASSPATH_FILE="${project.build.directory}\roo_classpath.txt"</echo>
+								<echo append="false" file="${basedir}/setup.env">export
+									ROO_ADDON_CLASSPATH_FILE="${project.build.directory}/roo_classpath.txt"</echo>
+								<echo
+									message="Created '${basedir}/setup.env' and '${basedir}\setup.bat'" />
+								<echo
+									message="*nix: use source ${basedir}/setup.env to read in variable" />
+								<dirname file="${project.build.directory}" property="output.dir" />
+								<mkdir dir="${output.dir}" />
+								<property name="the_cp" refid="maven.runtime.classpath" />
 								<echo append="false" file="${project.build.directory}/roo_classpath.txt">${the_cp}</echo>
-								<echo message="Cached Roo add-on classpath file '${project.build.directory}/roo_classpath.txt'"/>
+								<echo
+									message="Cached Roo add-on classpath file '${project.build.directory}/roo_classpath.txt'" />
 							</tasks>
 						</configuration>
 						<goals>
@@ -91,101 +110,102 @@
 					</execution>
 				</executions>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-help-plugin</artifactId>
-                <version>2.1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>2.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.3</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-help-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.4.3</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
 				</configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.2</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.0.4</version>
-                <configuration>
-                    <attach>true</attach>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Other -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2-beta-3</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.2</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+						<phase>package</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.0.4</version>
+				<configuration>
+					<attach>true</attach>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Other -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2-beta-3</version>
 				<configuration>
 					<descriptors>
 						<descriptor>src/main/assembly/assembly.xml</descriptor>
 					</descriptors>
 				</configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.2</version>
-            </plugin>
-            <!-- IDE -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <downloadJavadocs>false</downloadJavadocs>
-                    <!-- WTP is not required
-                    <wtpversion>2.0</wtpversion> -->
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-idea-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <dependenciesAsLibraries>true</dependenciesAsLibraries>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.2</version>
+			</plugin>
+			<!-- IDE -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>false</downloadJavadocs>
+					<!--
+						WTP is not required <wtpversion>2.0</wtpversion>
+					-->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-idea-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<dependenciesAsLibraries>true</dependenciesAsLibraries>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
