--- a/org.springframework.flex.roo.addon/.classpath
+++ b/org.springframework.flex.roo.addon/.classpath
@@ -1,30 +1,31 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1.jar" sourcepath="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.7/junit-4.7.jar" sourcepath="M2_REPO/junit/junit/4.7/junit-4.7-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/uk/co/badgersinfoil/metaas/metaas/0.8/metaas-0.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/felix/org.apache.felix.scr.annotations/1.2.0/org.apache.felix.scr.annotations-1.2.0.jar" sourcepath="M2_REPO/org/apache/felix/org.apache.felix.scr.annotations/1.2.0/org.apache.felix.scr.annotations-1.2.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/osgi/org.osgi.compendium/4.1.0/org.osgi.compendium-4.1.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/osgi/org.osgi.core/4.1.0/org.osgi.core-4.1.0.jar"/>
-  <classpathentry kind="src" path="/org.springframework.roo.addon.beaninfo"/>
-  <classpathentry kind="src" path="/org.springframework.roo.addon.entity"/>
-  <classpathentry kind="src" path="/org.springframework.roo.addon.finder"/>
-  <classpathentry kind="src" path="/org.springframework.roo.addon.web.controller"/>
-  <classpathentry kind="src" path="/org.springframework.roo.addon.web.mvc.jsp"/>
-  <classpathentry kind="src" path="/org.springframework.roo.classpath"/>
-  <classpathentry kind="src" path="/org.springframework.roo.file.monitor"/>
-  <classpathentry kind="src" path="/org.springframework.roo.file.undo"/>
-  <classpathentry kind="src" path="/org.springframework.roo.metadata"/>
-  <classpathentry kind="src" path="/org.springframework.roo.model"/>
-  <classpathentry kind="src" path="/org.springframework.roo.process.manager"/>
-  <classpathentry kind="src" path="/org.springframework.roo.project"/>
-  <classpathentry kind="src" path="/org.springframework.roo.shell"/>
-  <classpathentry kind="src" path="/org.springframework.roo.support"/>
-  <classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.1-b1/stringtemplate-3.1-b1.jar"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/java"/>
+	<classpathentry excluding="**/*.java" kind="src" output="target/test-classes" path="src/test/resources"/>
+	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
+	<classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1.jar" sourcepath="M2_REPO/org/antlr/antlr-runtime/3.0.1/antlr-runtime-3.0.1-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/4.7/junit-4.7.jar" sourcepath="M2_REPO/junit/junit/4.7/junit-4.7-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/uk/co/badgersinfoil/metaas/metaas/0.8/metaas-0.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2.jar" sourcepath="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/felix/org.apache.felix.scr.annotations/1.2.0/org.apache.felix.scr.annotations-1.2.0.jar" sourcepath="M2_REPO/org/apache/felix/org.apache.felix.scr.annotations/1.2.0/org.apache.felix.scr.annotations-1.2.0-sources.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/osgi/org.osgi.compendium/4.1.0/org.osgi.compendium-4.1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/osgi/org.osgi.core/4.1.0/org.osgi.core-4.1.0.jar"/>
+	<classpathentry kind="src" path="/org.springframework.roo.addon.beaninfo"/>
+	<classpathentry kind="src" path="/org.springframework.roo.addon.entity"/>
+	<classpathentry kind="src" path="/org.springframework.roo.addon.finder"/>
+	<classpathentry kind="src" path="/org.springframework.roo.addon.web.controller"/>
+	<classpathentry kind="src" path="/org.springframework.roo.addon.web.mvc.jsp"/>
+	<classpathentry kind="src" path="/org.springframework.roo.classpath"/>
+	<classpathentry kind="src" path="/org.springframework.roo.file.monitor"/>
+	<classpathentry kind="src" path="/org.springframework.roo.file.undo"/>
+	<classpathentry kind="src" path="/org.springframework.roo.metadata"/>
+	<classpathentry kind="src" path="/org.springframework.roo.model"/>
+	<classpathentry kind="src" path="/org.springframework.roo.process.manager"/>
+	<classpathentry kind="src" path="/org.springframework.roo.project"/>
+	<classpathentry kind="src" path="/org.springframework.roo.shell"/>
+	<classpathentry kind="src" path="/org.springframework.roo.support"/>
+	<classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.1-b1/stringtemplate-3.1-b1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
