--- a/org.springframework.flex.roo.addon/.classpath
+++ b/org.springframework.flex.roo.addon/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="src" path="/org.springframework.roo.support"/>
 	<classpathentry kind="var" path="M2_REPO/org/antlr/stringtemplate/3.1-b1/stringtemplate-3.1-b1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.springframework.roo.addon.maven"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
