Filling out the ActionScript meta-model.

--- a/org.springframework.flex.roo.addon/pom.xml
+++ b/org.springframework.flex.roo.addon/pom.xml
@@ -81,6 +81,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.roo</groupId>
+			<artifactId>org.springframework.roo.addon.maven</artifactId>
+			<version>${roo.version}</version>
+			<type>bundle</type>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.roo</groupId>
 			<artifactId>org.springframework.roo.addon.finder</artifactId>
 			<version>${roo.version}</version>
 			<type>bundle</type>
